StringCreate template interpretation now available for all template parameters